fixed z-index and menue sizing

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -8,9 +8,9 @@
     height: 60px; /* Height of the footer */
     background-color: #12273b;
     text-align: center;
-    margin:0;
-    padding:0;
-   
+    margin: 0;
+    padding: 0;
+    z-index: 1000;
 }
 
 .pro{
